--- a/index.html
+++ b/index.html
@@ -26,7 +26,119 @@
       <a href="" class="btn btn--white btn--animated">Discouver our tours</a>
     </div>
   </header>
-  <section class="grid-test">
+  <main>
+    <section class="section-about">
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          Exiting tours for adventurous people
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+          <p class="paragraph">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, voluptate a. Consectetur aliquam nam
+            animi, quos vero incidunt sint, nisi iusto corporis, officia magni facilis est veniam alias ea et?
+          </p>
+          <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+          <p class="paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam asperiores vitae, explicabo fugiat quasi
+            quam sit cum facere nesciunt.
+          </p>
+          <a href="" class="btn-text">Learn more &rarr;</a>
+        </div>
+        <div class="col-1-of-2">
+          <div class="composition">
+            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-features">
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-world"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, voluptate a. Consectetur aliquam nam
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-compass"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, voluptate a. Consectetur aliquam nam
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-map"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, voluptate a. Consectetur aliquam nam
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-heart"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Live a helthier life</h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, voluptate a. Consectetur aliquam nam
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-tours">
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          Most popular tours
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--1">&nbsp;</div>
+              <div class="card__heading">Heading</div>
+              <div class="card__details">Details</div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">Back</div>
+          </div>
+        </div>
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--2">&nbsp;</div>
+              <div class="card__heading">Heading</div>
+              <div class="card__details">Details</div>
+            </div>
+            <div class="card__side card__side--back card__side--back-2">Back</div>
+          </div>
+        </div>
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--3">&nbsp;</div>
+              <div class="card__heading">Heading</div>
+              <div class="card__details">Details</div>
+            </div>
+            <div class="card__side card__side--back card__side--back-3">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- <section class="grid-test">
     <div class="row">
       <div class="col-1-of-2">Col 1 of 2</div>
       <div class="col-1-of-2">Col 1 of 2</div>
@@ -55,7 +167,7 @@
       <div class="col-1-of-4">Col 1 of 4</div>
       <div class="col-3-of-4">Col 3 of 4</div>
     </div>
-  </section>
+  </section> -->
 </body>
 
 </html>
